--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -19,10 +19,17 @@ import Link from 'next/link';
     </div>
 </div>
 
-<p className="text-lg">AI tools for Microsoft Excel and Google Sheets the run models locally in the browser, not the cloud.  You never share your data, and get unlimited local processing at no extra cost.</p>
+<div class="flex justify-center">
+    <ul className="list-disc text-3xl">
+        <li>AI tools for Microsoft Excel and Google Sheets.</li>
+        <li>Models run locally in the browser, not the cloud.</li>
+        <li>Your data never leaves your spreadsheet.</li>
+        <li>Unlimited local processing with no API fees.</li>
+    </ul>
+</div>
 
 <div className="flex justify-center mt-10">
-    <Link href="/tools/text/sentiment-analysis">
+    <Link href="/tools/text/sentiment/overview">
         <button className="bg-green-600 hover:bg-green-800 text-white font-bold py-2 px-4 rounded">
             Go to Tools
         </button>
