separate tasks and apps

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -26,7 +26,7 @@ import Link from 'next/link';
         <li>✅Extensions available for [Excel](https://www.microsoft.com/en-ca/microsoft-365/excel) and [Sheets](https://www.google.ca/sheets/about/).</li>
         <li>🤗Uses open source models on [Hugging Face](https://huggingface.co/models?library=transformers.js&sort=trending).</li>
         <li>🆓Local processing = unlimited free usage.</li>
-        <li>🚀Sentiment analysis, more tasks coming soon.</li>
+        <li>🚀Initial focus on NLP tasks.</li>
     </ul>
 </div>
 
