update home, hf, and about

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -5,10 +5,10 @@ import Image from 'next/image'
 import Link from 'next/link';
 
 <div>
-    <div className="text-5xl font-bold text-center tracking-tight text-blue-900 mt-16 mb-12">
+    <div className="text-8xl font-bold text-center tracking-tight text-blue-900 mt-16 mb-12">
         <h1 className="flex flex-col items-center">
-            <span>Machine Learning</span>
-            <span className="text-gray-500 text-4xl">in a Spreadsheet</span>
+            <span>AI Tools</span>
+            <span className="text-gray-500 text-4xl">for Excel and Sheets</span>
         </h1>
     </div>
     <div className="flex justify-center space-x-20 mb-12" >
@@ -19,15 +19,13 @@ import Link from 'next/link';
     </div>
 </div>
 
-<div className="flex justify-center">
-    <ul className="text-lg">
-        <li>💻Local model inference using [Transformers.js](https://huggingface.co/docs/transformers.js/index).</li>
-        <li>🔒No data is shared outside your spreadsheet.</li>
-        <li>✅Extensions available for [Excel](https://www.microsoft.com/en-ca/microsoft-365/excel) and [Sheets](https://www.google.ca/sheets/about/).</li>
-        <li>🤗Uses open source models on [Hugging Face](https://huggingface.co/models?library=transformers.js&sort=trending).</li>
-        <li>🆓Local processing = unlimited free usage.</li>
-        <li>🚀Initial focus on NLP tasks.</li>
-    </ul>
+Use AI models locally in the browser for enhanced privacy and no cost, and leverage larger models in the cloud for higher quality results. Most tools are accessed through custom functions, as shown in the following example:
+
+```excel
+=BOARDFLARE.TRANSLATE("I love this product!", "en", "fr")
+```
+<div className="flex justify-center text-lg">
+    
 </div>
 
 <div className="flex justify-center mt-10">
