add experimental to apps

--- a/pages/apps/excel/hugging-face.mdx
+++ b/pages/apps/excel/hugging-face.mdx
@@ -1,10 +1,23 @@
 ---
 title: Hugging Face for Excel
 ---
+import { Callout } from 'nextra/components'
 
 # Hugging Face for Excel
 
-Inference models and spaces on Hugging Face from Excel functions.  Free to use.
+<Callout type="warning" emoji="🧪">
+  **EXPERIMENTAL**:  Breaking changes to the API are probable.  Please provide [feedback](/company/support).
+</Callout>
+
+Inference models and spaces on Hugging Face from Excel functions.  Free to use.  Install from the Microsoft AppSource store at the link below, or directly from Excel.
+
+<a href="https://appsource.microsoft.com/en-us/product/office/WA200007352?tab=Overview">
+    <img 
+        src="/images/MS_AppSource.png" 
+        alt="AppSource"
+        style={{ paddingTop: '10px', width: '150px' }}
+    />
+</a>
 
 ## Overview
 
@@ -19,24 +32,12 @@ As an example, you could build a custom function that translates text from one l
 
 These functions are intended to be consumed in a named Excel [LAMBDA function](https://support.microsoft.com/en-us/office/lambda-function-bd212d27-1cd1-4321-a34a-ccbf254b8b67) to conceal details not relevant to end-users (e.g. task, model, hf_token, endpoint, etc.).
 
-## Installation
-
-Install from the Microsoft AppSource store at the link below, or directly from Excel.
-
-<a href="https://appsource.microsoft.com/en-us/product/office/WA200007352?tab=Overview">
-    <img 
-        src="/images/MS_AppSource.png" 
-        alt="AppSource"
-        style="padding-top: 10px; width: 200px;"
-    />
-</a>
-
 ## Features
 
-🆓 Unlimited free use.<br>
-🔒 None of your data is sent to our servers.<br>
-💻 Option to inference locally.<br>
-🚀 Fast way to test or operationalize your model.<br>
+🆓 Unlimited free use.<br/>
+🔒 None of your data is sent to our servers.<br/>
+💻 Option to inference locally.<br/>
+🚀 Fast way to test or operationalize your model.<br/>
 
 ## Demo
 
