--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -8,7 +8,7 @@ import { Callout } from 'nextra/components'
 # Python for Excel
 
 <Callout type="warning" emoji="🧪">
-  **EXPERIMENTAL**:  Breaking changes to the API are probable.  Please provide [feedback](/company/support).
+  **EXPERIMENTAL**:  Breaking changes are probable.  [Feedback](/company/support) is appreciated!
 </Callout>
 
 <a href="https://appsource.microsoft.com/en-us/product/office/WA200007447?tab=Overview">
@@ -21,17 +21,25 @@ import { Callout } from 'nextra/components'
 
 ## Overview
 
-This add-in focuses on running Python code as a [pure function](https://en.wikipedia.org/wiki/Pure_function), so you can incorporate it into your formulas and LAMBDA functions.  This is fundamentally different than the native [Python in Excel](https://support.microsoft.com/en-us/office/get-started-with-python-in-excel-a33fbcbe-065b-41d3-82cf-23d05397f53d) which is more of an interactive calculation tool, similar to a Jupyter Notebook, and does not work as a function inside formulas.  Some other key differences are outlined in the [features](#features) below.  Install from the Microsoft AppSource store at the link below, or directly from Excel.
+Runs Python code as a function so you can incorporate it into your formulas and LAMBDA functions.  For example, incorporating Python code in a LAMBDA function which is then named `MYFUNC` and called with `5, 3`:
+    
+```excel
+=LAMBDA(x, y, BOARDFLARE.PY("pyout = data1 * data2", x, y))
+=MYFUNC(5, 3)
+```
+This enables you to create extremely powerful custom functions without needing to build a custom Excel add-in.
 
 ## Features
 
 Some key differences compared to the native [Python in Excel](https://support.microsoft.com/en-us/office/get-started-with-python-in-excel-a33fbcbe-065b-41d3-82cf-23d05397f53d) are as follows:
 
-🆓 Free add-in and no Office 365 license is required.<br/>
+🆓 Free add-in, no Office 365 license required.<br/>
 🌐 Works in Excel for web as well as desktop.<br/>
 ☁️ Runtime has network access for API calls.<br/>
 📦 Import custom packages (pure Python only).<br/>
 🔒 Runs locally, so no data is shared outside Excel.<br/>
+✅ Can be used inside formulas and LAMBDA functions.<br/>
+➡️ Code can be centralized and loaded from a URL.<br/>
 🚀 Performance is only limited by your CPU.<br/>
 
 ## Runtime
@@ -46,7 +54,7 @@ Global variables are used to pass data to your code, as discussed in more detail
 
 ## Functions
 
-Functions are accessed in the `BOARDFLARE` namespace (e.g. `=BOARDFLARE.PY(code, [data1])`).  See our [example workbook](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/EejrDLsCMzBFoY2r-QWdu5MB_6spaJau_Lbu4zWcHg_-HQ?e=9E70aL) for usage.
+Functions are accessed in the `BOARDFLARE` namespace (e.g. `=BOARDFLARE.PY(code, [data1])`).  See our [example workbook](https://1drv.ms/x/s!AmvHMvGKbZDOibEu75MVo8mvZqbAkg?e=XRMdBI) for usage.
 
 ### PY
 
@@ -58,8 +66,8 @@ The `PY` function executes Python code with optional repeating **scalar** argume
 
 | Argument | Type   | Optional | Description |
 |----------|--------|----------|-------------|
-| code     | string | No       | Python code must assign global variable `pyout` with a **scalar** of type `int, float, bool, or str`. |
-| data1    | number, string, boolean | Yes       | Repeating argument that will set global **scalar** variables `data1, data2, ..`. |
+| code     | string | No       | Python code, or URL to code, e.g. `https://foo.com/code.py`.  Python code must assign global variable `pyout` with a **scalar** of type `int, float, bool, or str`. |
+| data1    | number, string, boolean | Yes       | Repeating argument that will set global **scalar** variables `data1, data2, ..` which you can then reference in your code to pass in data. |
 
 A simple example is as follows:
 
@@ -67,6 +75,13 @@ A simple example is as follows:
 =BOARDFLARE.PY("pyout = data1 * data2", 5, 3)
 ```
 This sets global variables `data1 = 5 ; data2 = 3`, evaluates to `pyout = 15`, and returns `15` in a single cell.
+
+Or loading from URL:
+
+```excel
+=BOARDFLARE.PY("https://foo.com/code.py", 5, 3)
+```
+where `mycode.py` contains the same code as above.  Note that the URL must be served over HTTPS.
 
 You could assign serialized arrays (e.g. using `ARRAYTOTEXT`) to `data1, data2, ..` and return a serialized array which you deserialize in Excel, but a simpler approach is to use the `PY.ARR` function below which natively handles arrays.
 
@@ -80,7 +95,7 @@ The `PY.ARR` function is the same as `PY` except that it takes arrays for `data1
 
 | Argument | Type   | Optional | Description |
 |----------|--------|----------|-------------|
-| code     | string | No       | Python code must assign global variable `pyout` with an **matrix** of elements of type `int, float, bool, or str`. |
+| code     | string | No       | Python code, or URL to code, e.g. `https://foo.com/code.py`.  Python code must assign global variable `pyout` with an **matrix** of elements of type `int, float, bool, or str`. |
 | data1    | array | Yes       | Repeating argument that will set global **matrix** variables `data1, data2, ..`. Values can be a range `A2:A3`, array constant `{2,3}`, or a function that returns an array. | 
 
 You could use `PY.ARR` for scalars, but since everything is handled as a matrix, it can be a bit cumbersome.  Let's implement the previous example using `PY.ARR`:
@@ -103,57 +118,61 @@ Or using numpy and returning a row:
 ```
 This sets global `data1 = [[1,2]]`, so `pyout = [['Sales', 3]]`, which outputs a row with `Sales` in one cell and `3` in the next cell.
 
-### PY.BETA
-
-`PY.BETA` function has the same array input/output as `PY.ARR` but contains all the latest beta features.  At this point, the main difference is that if the `code` starts with `https://` it will attempt to load the code from that URL.  Note that `http` is not supported because the add-in runs in a secure context and the Edge browser runtime blocks insecure requests.
+You can also load code from URL:
 
 ```excel
-=BOARDFLARE.PY.BETA("https://example.com/mycode.py", {1,2})
+=BOARDFLARE.PY.ARR("https://foo.com/code.py", {1,2})
 ```
-Loading code from a URL solves three key problems as follows: 
+
+### PY.BETA
+
+`PY.BETA` function has the same array input/output as `PY.ARR` but contains all the latest beta features/fixes before they are moved into the regular functions.  There are no noteworthy features to try in `PY.BETA` at the moment, so you can stick with `PY` and `PY.ARR` for now.
+
+## Development
+
+### Code from URL
+
+Code can only be loaded from a URL if it is served over HTTPS due to browser security restrictions.  Deploying your code to a URL has two key advantages:
 
 1. Centralized deployment.  Putting your Python code in a central location allows you to update it without having to update each Excel workbook that contains it.  
 
 2. Version control.  If the central location is either a git repository (e.g. GitHub) or a storage location deployed to from a git repository (e.g. Azure Storage) you can properly version control your code.
 
-3. No cut-and-paste development.  Loading code from a URL allows you to use live reload with your favorite development tools instead of cut-and-paste.  See the [development](#development) section for more details.
-
-## Development
+A simple and free way to do this is to use a [GitHub Gist](https://gist.github.com/).  You can create a new Gist, paste your Python code into it, and then use the URL of the Gist in the `PY` function.  Make sure you click on the raw button in the Gist to get a URL that goes directly to your code [like this](https://gist.githubusercontent.com/bolleman/14e68b8d6a6e2897ef5f70dbd28ea7e3/raw/ce32551dd5df578371d70db563459d450921f13b/emails.py).
 
 ### Local IDE
 
-If you are a Python developer, you'll already have your favorite tools, and you simply need to set things up for live serving your code to URL.  For example, [VS Code](https://code.visualstudio.com/) together with [Live Server](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer) enables you to serve files on a localhost URL as follows: 
+If you are already using an IDE such as [VS Code](https://code.visualstudio.com/), pairing it up with something like [Live Server](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer) enables you to serve your local code files with live reload as follows: 
 
 ```excel
-=BOARDFLARE.PY.BETA("https://localhost:4000/mycode.py", {1,2})
+=BOARDFLARE.PY.ARR("https://localhost:4000/mycode.py", {1,2})
 ```
 
-It may be convenient to simply hardcode the data1, data2, ... globals into your code so that you can test directly in your IDE with your local Python runtime without having toggle over to Excel.  You can use the fact that the Python `sys.platform` in Excel will be `emscripten` to only use the hardcoded data outside Excel.  For example:
+In the first phase of development it may be convenient to simply hardcode the data1, data2, ... globals into your code so that you can test directly in your IDE with your local Python runtime.  You can use the fact that the Python `sys.platform` in Excel will be `emscripten` to only use the hardcoded data outside Excel.  For example:
 
 ```python
 import sys
 
-# Hard-code data when NOT in Excel
+# Hard-code globals when NOT in Excel.
 if sys.platform != 'emscripten':
-    data1 = [[2]]
-    data2 = [[3]]
+    data1 = 2
+    data2 = 3
 
-# Print globals to console to confirm
+# Print globals to console to check.
 print(f"data1: {data1}, data2: {data2}")
 
-# Perform element-wise addition
-pyout = [[data1[0][0] + data2[0][0]]]
+pyout = data1 + data2
 ```
 
 ### JupyterLite
 
-If you're familiar with JupyterLab or Notebooks, a great option is [JupyterLite](https://jupyterlite.readthedocs.io/en/stable/_static/lab/index.html) which is a JupyterLab distribution that runs in the browser using the same Pyodide Python kernal that this add-in is using.  This means that any code that runs in JupyterLite should run in Excel.  Right now you'll need to cut and paste your code into Excel, or push it to some location accessible by URL (e.g. GitHub Gist) if using `PY.BETA`.
+If you're familiar with JupyterLab or Notebooks, a great option is [JupyterLite](https://jupyterlite.readthedocs.io/en/stable/_static/lab/index.html) which is a JupyterLab distribution that runs in the browser using the same Pyodide Python kernal that this add-in is using.  This means that any code that runs in JupyterLite should run in Excel.  Right now you'll need to cut and paste your code into Excel, or push it to some location accessible by URL (e.g. GitHub Gist).  Note that the trick above of hard-coding globals will not work in JupyterLite, as the Python `sys.platform` will be the same as in Excel.  Instead you should load the globals in a previous cell so they are available to your code.
 
 Since JupyterLite stores its files in the browser IndexedDB, if we hosted a JupyterLite instance on the same sub-domain as our add-in (so that they could share the same storage), it would enable you to directly reference your code files in Jupyter from they `PY` functions, similar to using a URL.  This would provide the equivalent of live reload from a Jupyter notebook.  If this is something you think would be useful, please [let us know](/company/support).
 
 ### ChatGPT
 
-[ChatGPT](https://chat.openai.com/) and similar tools can be used to generate Python code snippets.  You can then copy and paste these snippets into Excel, or use the `PY.BETA` function to load the code from a URL.  This can be a great way to quickly prototype code, especially if you're not a Python developer.
+[ChatGPT](https://chat.openai.com/) and similar tools can be used to generate Python code snippets.  You can then copy and paste these snippets into Excel or a Gist and load the code from a URL.  This can be a great way to quickly prototype code, especially if you're not a Python developer.
 
 ## Applications
 
@@ -168,6 +187,9 @@ Some example applications are as follows:
 4. **Calling APIs**:  For example, let's say you're trying to call a REST API and manipulate the JSON response into something useful.
 
 ## Changelog
+
+1.0.4 - 2024-09-25
+- Added ability to load code from URL to `PY` and `PY.ARR` functions.  `PY.BETA` now has no new features, but will be where new features are tested before moving to `PY` and `PY.ARR`.
 
 1.0.3 - 2024-09-24
 - Added `PY.BETA` function with ability to load code from a URL.
