--- a/pages/apps/excel/freegpt.mdx
+++ b/pages/apps/excel/freegpt.mdx
@@ -1,19 +1,20 @@
 ---
-title: FreeGPT for Excel
-icon: freegpt.png
+title: Local GPT for Excel
 ---
 
 import { Callout } from 'nextra/components'
 
-# FreeGPT for Excel
+# Local GPT for Excel
 
 <Callout type="warning" emoji="🧪">
-  **EXPERIMENTAL**:  Breaking changes to the API are probable.  Please provide [feedback](/company/support).
+  **EXPERIMENTAL**:  Please provide [feedback](/company/support).
 </Callout>
 
 ## Overview
 
-Provides unlimited free and secure AI functions by using a small model that runs locally on your computer.  While not as fast and smart as ChatGPT, maybe it is all you need for simple tasks.  Install from the Microsoft AppSource store at the link below, or directly from Excel.
+Provides unlimited free and secure AI functions by using a small language model, currently [Gemma2 2B](https://github.com/google-deepmind/gemma), that runs locally on your computer so your data never leaves Excel.  While not as fast and smart as ChatGPT, maybe it is all you need for simple tasks.  If you have access to an advanced GPU on your computer, it may be possible to run much larger and more powerful models. Please [let us know](/company/support) if you are interested in this as a paid upgrade.
+
+Install from the Microsoft AppSource store at the link below, or directly from Excel.
 
 <a href="https://appsource.microsoft.com/en-us/product/office/WA200007427?tab=Overview">
     <img 
@@ -25,51 +26,49 @@ Provides unlimited free and secure AI functions by using a small model that runs
 
 ## Features
 
-🆓 Unlimited free use.<br/>
+🆓 Unlimited free use of small models.<br/>
 💻 Processed locally on your computer.<br/>
 🔒 No data is shared outside Excel.<br/>
 
 ## Requirements
 - You must have a device that supports [WebGPU](https://developer.mozilla.org/en-US/docs/Web/API/WebGPU_API) with `shader-f16`.
 
-## Limitations
-- Much slower and less powerful than ChatGPT. 
-
 ## Functions
 
-These are the initial functions provided.  PROMPT is the most versatile and enables you to prompt the model to do a wide range of tasks.  The other functions are more specialized and are provided for convenience.
+These are the initial functions provided.  LOCAL.GPT is the most versatile and enables you to prompt the model to do a wide range of tasks.  The other functions are more specialized and are provided for convenience.
 
-### Classify
+### LOCAL.GPT
 
-=<code>FREEGPT.CLASSIFY (text, categories)</code><br/>
-<code>text:</code> Text to classify.<br/>
-<code>categories:</code> Range of categories.<br/>
-E.g., to classify the content of cell A1 into categories listed in cells B1 to B5:<br/>
-<code>=FREEGPT.CLASSIFY(A1, B1:B5)</code><br/>
-
-### Prompt
-
-=<code>FREEGPT.PROMPT (prompt, [data], [options])</code><br/>
+=<code>BOARDFLARE.LOCAL.GPT (prompt, [data], [options])</code><br/>
 <code>prompt:</code> Instructions for model, e.g. "What is the problem this user is having?<br/>
 <code>data:</code> Optional data to provide context to the model. If a range of cells is provided, it will be converted to a comma-separated list that is added to the prompt.  Continuing with the example above, this could be a cell with a support ticket description.<br/>
 
-### Summarize
+### LOCAL.CLASSIFY
 
-=<code>FREEGPT.SUMMARIZE (text)</code><br/>
+=<code>BOARDFLARE.LOCAL.CLASSIFY (text, categories)</code><br/>
+<code>text:</code> Text to classify.<br/>
+<code>categories:</code> Range of categories.<br/>
+E.g., to classify the content of cell A1 into categories listed in cells B1 to B5:<br/>
+<code>=BOARDFLARE.LOCAL.CLASSIFY(A1, B1:B5)</code><br/>
+
+
+### LOCAL.SUMMARIZE
+
+=<code>BOARDFLARE.LOCAL.SUMMARIZE (text)</code><br/>
 <code>text:</code> Text to summarize.<br/>
 E.g., to summarize the content of cell A1:<br/>
-<code>=FREEGPT.SUMMARIZE(A1)</code><br/>
+<code>=BOARDFLARE.LOCAL.SUMMARIZE(A1)</code><br/>
 
-This just uses the PROMPT function with a default prompt of "Summarize the following text:".  It is provided for convenience.
+This just uses the LOCAL.GPT function with a prompt of "Summarize the following text:".  It is provided for convenience.
 
-### Translate
+### LOCAL.TRANSLATE
 
-=<code>FREEGPT.TRANSLATE (text, source_lang, target_lang, [model])</code><br/>
+=<code>BOARDFLARE.LOCAL.TRANSLATE (text, source_lang, target_lang, [model])</code><br/>
 <code>text:</code> Must be less than 1000 characters.<br/>
 <code>source_lang:</code> Text language, e.g. "fr" for French.<br/>
 <code>target_lang:</code> Translation language, e.g. "en" for English.<br/>
 E.g., to translate cell A1 from French to English:<br/>
-<code>=FREEGPT.TRANSLATE(A1, "fr", "en")</code><br/>
+<code>=BOARDFLARE.LOCAL.TRANSLATE(A1, "fr", "en")</code><br/>
 
 Either the source or target language must be English "<code>en</code>", and the other language may be any one of the following: 
 
@@ -86,4 +85,3 @@ This add-in would not be possible without the following great open-source softwa
 
 - [WebLLM](https://github.com/mlc-ai/web-llm), see [license](https://github.com/mlc-ai/web-llm/blob/main/LICENSE)
 - [Transformers.js](https://github.com/xenova/transformers.js), see [license](https://github.com/xenova/transformers.js/blob/main/LICENSE)
-- [Gemma](https://github.com/google-deepmind/gemma), see [license](https://github.com/google-deepmind/gemma/blob/main/LICENSE)
